package main.model;

public interface Command {
    void execute();
}